fix matrix clipping

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,7 +43,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-weight: lighter;
   text-decoration: none;
-  transition: all .5s ease-in-out;
+  transition: all 200ms ease-in-out;
 }
 
 .server:hover {
